include/Iedk.h

    
    typedef enum IEE_FacialExpressionThreshold_enum {
        FE_SENSITIVITY  
    } IEE_FacialExpressionThreshold_t;
    typedef void* EmoStateHandle;
    typedef void* EmoEngineEventHandle;
    typedef enum IEE_Event_enum {
        IEE_UnknownEvent          = 0x0000,     
        IEE_EmulatorError         = 0x0001,     
        IEE_ReservedEvent         = 0x0002,     
        IEE_UserAdded             = 0x0010,     
        IEE_UserRemoved           = 0x0020,     
        IEE_EmoStateUpdated       = 0x0040,     
        IEE_ProfileEvent          = 0x0080,     
        IEE_MentalCommandEvent    = 0x0100,     
        IEE_FacialExpressionEvent = 0x0200,     
        IEE_InternalStateChanged  = 0x0400,     
        IEE_AllEvent              = IEE_UserAdded | IEE_UserRemoved | IEE_EmoStateUpdated |
                                    IEE_ProfileEvent | IEE_MentalCommandEvent |
                                    IEE_FacialExpressionEvent | IEE_InternalStateChanged
    } IEE_Event_t;
    typedef enum IEE_FacialExpressionEvent_enum {
        IEE_FacialExpressionNoEvent = 0,        
        IEE_FacialExpressionTrainingStarted,    
        IEE_FacialExpressionTrainingSucceeded,  
        IEE_FacialExpressionTrainingFailed,     
        IEE_FacialExpressionTrainingCompleted,  
        IEE_FacialExpressionTrainingDataErased, 
        IEE_FacialExpressionTrainingRejected,   
        IEE_FacialExpressionTrainingReset       
    } IEE_FacialExpressionEvent_t;
    typedef enum IEE_MentalCommandEvent_enum {
        IEE_MentalCommandNoEvent = 0,                   
        IEE_MentalCommandTrainingStarted,               
        IEE_MentalCommandTrainingSucceeded,             
        IEE_MentalCommandTrainingFailed,                
        IEE_MentalCommandTrainingCompleted,             
        IEE_MentalCommandTrainingDataErased,            
        IEE_MentalCommandTrainingRejected,              
        IEE_MentalCommandTrainingReset,                 
        IEE_MentalCommandAutoSamplingNeutralCompleted,  
        IEE_MentalCommandSignatureUpdated               
    } IEE_MentalCommandEvent_t;
    EDK_API int
        IEE_EngineConnect(const char* strDevID = "Emotiv Systems-5");
    EDK_API int
        IEE_EngineRemoteConnect(const char* szHost,
                                unsigned short port);
    EDK_API int
        IEE_EngineDisconnect();
    EDK_API int
        IEE_EnableDiagnostics(const char* szFilename,
                              int fEnable,
                              int nReserved);
    EDK_API EmoEngineEventHandle
        IEE_EmoEngineEventCreate();
    EDK_API EmoEngineEventHandle
        IEE_ProfileEventCreate();
    EDK_API void
        IEE_EmoEngineEventFree(EmoEngineEventHandle hEvent);
    EDK_API EmoStateHandle
        IEE_EmoStateCreate();
    EDK_API void
        IEE_EmoStateFree(EmoStateHandle hState);
    EDK_API IEE_Event_t
        IEE_EmoEngineEventGetType(EmoEngineEventHandle hEvent);
    EDK_API IEE_MentalCommandEvent_t
        IEE_MentalCommandEventGetType(EmoEngineEventHandle hEvent);
    EDK_API IEE_FacialExpressionEvent_t
        IEE_FacialExpressionEventGetType(EmoEngineEventHandle hEvent);
    EDK_API int
        IEE_EmoEngineEventGetUserId(EmoEngineEventHandle hEvent,
                                    unsigned int *pUserIdOut);
    EDK_API int
        IEE_EmoEngineEventGetEmoState(EmoEngineEventHandle hEvent,
                                      EmoStateHandle hEmoState);
    EDK_API int
        IEE_EngineGetNextEvent(EmoEngineEventHandle hEvent);
    EDK_API int
        IEE_EngineClearEventQueue(int eventTypes);
    EDK_API int
        IEE_EngineGetNumUser(unsigned int* pNumUserOut);
    EDK_API int
        IEE_SetHardwarePlayerDisplay(unsigned int userId,
                                     unsigned int playerNum);
    EDK_API int
        IEE_SetUserProfile(unsigned int userId,
                           const unsigned char profileBuffer[],
                           unsigned int length);
    EDK_API int
        IEE_GetUserProfile(unsigned int userId,
                           EmoEngineEventHandle hEvent);
    EDK_API int
        IEE_GetBaseProfile(EmoEngineEventHandle hEvent);
    EDK_API int
        IEE_GetUserProfileSize(EmoEngineEventHandle hEvt,
                               unsigned int* pProfileSizeOut);
    EDK_API int
        IEE_GetUserProfileBytes(EmoEngineEventHandle hEvt,
                                unsigned char destBuffer[],
                                unsigned int length);
    EDK_API int
        IEE_LoadUserProfile(unsigned int userID,
                            const char* szInputFilename);
    EDK_API int
        IEE_SaveUserProfile(unsigned int userID,
                            const char* szOutputFilename);
    EDK_API int
        IEE_FacialExpressionSetThreshold(unsigned int userId,
                                         IEE_FacialExpressionAlgo_t algoName,
                                         IEE_FacialExpressionThreshold_t thresholdName,
                                         int value);
    EDK_API int
        IEE_FacialExpressionGetThreshold(unsigned int userId,
                                         IEE_FacialExpressionAlgo_t algoName,
                                         IEE_FacialExpressionThreshold_t thresholdName,
                                         int *pValueOut);