lib/mac/Framework/edk.framework/Versions/3/Headers/IEmoStateDLL.h

    
    typedef enum IEE_FacialExpressionAlgo_enum {
        FE_NEUTRAL    = 0x0001,
        FE_BLINK      = 0x0002,
        FE_WINK_LEFT  = 0x0004,
        FE_WINK_RIGHT = 0x0008,
        FE_HORIEYE    = 0x0010,
        FE_SURPRISE   = 0x0020,
        FE_FROWN      = 0x0040,
        FE_SMILE      = 0x0080,
        FE_CLENCH     = 0x0100,
    } IEE_FacialExpressionAlgo_t;
    typedef enum IEE_PerformanceMetricAlgo_enum {
        PM_EXCITEMENT = 0x0001,
        PM_RELAXATION = 0x0002,
        PM_STRESS     = 0x0004,
        PM_ENGAGEMENT = 0x0008,
        PM_INTEREST   = 0x0010
    } IEE_PerformanceMetricAlgo_t;
    typedef enum IEE_MentalCommandAction_enum {
        MC_NEUTRAL                  = 0x0001,
        MC_PUSH                     = 0x0002,
        MC_PULL                     = 0x0004,
        MC_LIFT                     = 0x0008,
        MC_DROP                     = 0x0010,
        MC_LEFT                     = 0x0020,
        MC_RIGHT                    = 0x0040,
        MC_ROTATE_LEFT              = 0x0080,
        MC_ROTATE_RIGHT             = 0x0100,
        MC_ROTATE_CLOCKWISE         = 0x0200,
        MC_ROTATE_COUNTER_CLOCKWISE = 0x0400,
        MC_ROTATE_FORWARDS          = 0x0800,
        MC_ROTATE_REVERSE           = 0x1000,
        MC_DISAPPEAR                = 0x2000
    } IEE_MentalCommandAction_t;
    typedef enum IEE_SignalStrength_enum {
        NO_SIG = 0,
        BAD_SIG,
        GOOD_SIG
    } IEE_SignalStrength_t;
    EMOSTATE_DLL_API float
        IS_FacialExpressionGetUpperFaceActionPower(EmoStateHandle state);
    EMOSTATE_DLL_API IEE_FacialExpressionAlgo_t
        IS_FacialExpressionGetLowerFaceAction(EmoStateHandle state);
    EMOSTATE_DLL_API float
        IS_FacialExpressionGetLowerFaceActionPower(EmoStateHandle state);
    EMOSTATE_DLL_API int
        IS_FacialExpressionIsActive(EmoStateHandle state,
                                    IEE_FacialExpressionAlgo_t type);
    EMOSTATE_DLL_API float
        IS_PerformanceMetricGetExcitementLongTermScore(EmoStateHandle state);
    EMOSTATE_DLL_API float
        IS_PerformanceMetricGetInstantaneousExcitementScore(EmoStateHandle state);
    EMOSTATE_DLL_API int
        IS_PerformanceMetricIsActive(EmoStateHandle state,
                                     IEE_PerformanceMetricAlgo_t type);
    EMOSTATE_DLL_API float
        IS_PerformanceMetricGetRelaxationScore(EmoStateHandle state);
    EMOSTATE_DLL_API float
        IS_PerformanceMetricGetStressScore(EmoStateHandle state);
    EMOSTATE_DLL_API float
        IS_PerformanceMetricGetEngagementBoredomScore(EmoStateHandle state);
    EMOSTATE_DLL_API float
        IS_PerformanceMetricGetInterestScore(EmoStateHandle state);
    EMOSTATE_DLL_API float
        IS_PerformanceMetricGetFocusScore(EmoStateHandle state);
    EMOSTATE_DLL_API IEE_MentalCommandAction_t
        IS_MentalCommandGetCurrentAction(EmoStateHandle state);
    EMOSTATE_DLL_API float
        IS_MentalCommandGetCurrentActionPower(EmoStateHandle state);
    EMOSTATE_DLL_API int
        IS_MentalCommandIsActive(EmoStateHandle state);
    EMOSTATE_DLL_API IEE_SignalStrength_t
        IS_GetWirelessSignalStatus(EmoStateHandle state);
    EMOSTATE_DLL_API void
        IS_Copy(EmoStateHandle a,
                EmoStateHandle b);
    EMOSTATE_DLL_API int
        IS_PerformanceMetricEqual(EmoStateHandle a,
                                  EmoStateHandle b);
    EMOSTATE_DLL_API int
        IS_FacialExpressionEqual(EmoStateHandle a,
                                 EmoStateHandle b);
    EMOSTATE_DLL_API int
        IS_MentalCommandEqual(EmoStateHandle a,
                              EmoStateHandle b);
    EMOSTATE_DLL_API int
        IS_EmoEngineEqual(EmoStateHandle a,
                          EmoStateHandle b);
    EMOSTATE_DLL_API int
        IS_Equal(EmoStateHandle a,
                 EmoStateHandle b);
    EMOSTATE_DLL_API void
        IS_GetBatteryChargeLevel(EmoStateHandle state,
                                 int* chargeLevel,
                                 int* maxChargeLevel);
    EMOSTATE_DLL_API void
        IS_PerformanceMetricGetInstantaneousExcitementModelParams(EmoStateHandle state,
                                                                  double* rawScore,
                                                                  double* minScale,
                                                                  double* maxScale);
    EMOSTATE_DLL_API void
        IS_PerformanceMetricGetRelaxationModelParams(EmoStateHandle state,
                                                     double* rawScore,
                                                     double* minScale,
                                                     double* maxScale);
    EMOSTATE_DLL_API void
        IS_PerformanceMetricGetEngagementBoredomModelParams(EmoStateHandle state,
                                                            double* rawScore,
                                                            double* minScale,
                                                            double* maxScale);
    EMOSTATE_DLL_API void
        IS_PerformanceMetricGetStressModelParams(EmoStateHandle state,
                                                 double* rawScore,
                                                 double* minScale,
                                                 double* maxScale);
    EMOSTATE_DLL_API void
        IS_PerformanceMetricGetInterestModelParams(EmoStateHandle state,
                                                   double* rawScore,
                                                   double* minScale,
                                                   double* maxScale);
    EMOSTATE_DLL_API void
        IS_PerformanceMetricGetFocusModelParams(EmoStateHandle state,
                                                double* rawScore,
                                                double* minScale,
                                                double* maxScale);