examples/C#/DotNetEmotivSDK/EdkDll.cs


        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_FacialExpressionGetUpperFaceActionPower")]
        static extern Single Unmanaged_IS_FacialExpressionGetUpperFaceActionPower(IntPtr state);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_FacialExpressionGetLowerFaceAction")]
        static extern IEE_FacialExpressionAlgo_t Unmanaged_IS_FacialExpressionGetLowerFaceAction(IntPtr state);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_FacialExpressionGetLowerFaceActionPower")]
        static extern Single Unmanaged_IS_FacialExpressionGetLowerFaceActionPower(IntPtr state);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_FacialExpressionIsActive")]
        static extern Boolean Unmanaged_IS_FacialExpressionIsActive(IntPtr state, IEE_FacialExpressionAlgo_t type);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_PerformanceMetricGetExcitementLongTermScore")]
        static extern Single Unmanaged_IS_PerformanceMetricGetExcitementLongTermScore(IntPtr state);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_PerformanceMetricGetInstantaneousExcitementScore")]
        static extern Single Unmanaged_IS_PerformanceMetricGetInstantaneousExcitementScore(IntPtr state);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_PerformanceMetricIsActive")]
        static extern Boolean Unmanaged_IS_PerformanceMetricIsActive(IntPtr state, IEE_PerformanceMetricAlgo_t type);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_PerformanceMetricGetRelaxationScore")]
        static extern Single Unmanaged_IS_PerformanceMetricGetRelaxationScore(IntPtr state);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_PerformanceMetricGetStressScore")]
        static extern Single Unmanaged_IS_PerformanceMetricGetStressScore(IntPtr state);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_PerformanceMetricGetEngagementBoredomScore")]
        static extern Single Unmanaged_IS_PerformanceMetricGetEngagementBoredomScore(IntPtr state);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_PerformanceMetricGetInterestScore")]
        static extern Single Unmanaged_IS_PerformanceMetricGetInterestScore(IntPtr state);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_PerformanceMetricGetFocusScore")]
        static extern Single Unmanaged_IS_PerformanceMetricGetFocusScore(IntPtr state);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_MentalCommandGetCurrentAction")]
        static extern IEE_MentalCommandAction_t Unmanaged_IS_MentalCommandGetCurrentAction(IntPtr state);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_MentalCommandGetCurrentActionPower")]
        static extern Single Unmanaged_IS_MentalCommandGetCurrentActionPower(IntPtr state);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_MentalCommandIsActive")]
        static extern Boolean Unmanaged_IS_MentalCommandIsActive(IntPtr state);
        
        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_GetWirelessSignalStatus")]
        static extern IEE_SignalStrength_t Unmanaged_IS_GetWirelessSignalStatus(IntPtr state);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_Copy")]
        static extern void Unmanaged_IS_Copy(IntPtr a, IntPtr b);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_PerformanceMetricEqual")]
        static extern Boolean Unmanaged_IS_PerformanceMetricEqual(IntPtr a, IntPtr b);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_FacialExpressionEqual")]
        static extern Boolean Unmanaged_IS_FacialExpressionEqual(IntPtr a, IntPtr b);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_MentalCommandEqual")]
        static extern Boolean Unmanaged_IS_MentalCommandEqual(IntPtr a, IntPtr b);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_EmoEngineEqual")]
        static extern Boolean Unmanaged_IS_EmoEngineEqual(IntPtr a, IntPtr b);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_Equal")]
        static extern Boolean Unmanaged_IS_Equal(IntPtr a, IntPtr b);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_GetBatteryChargeLevel")]
        static extern void Unmanaged_IS_GetBatteryChargeLevel(IntPtr state, out Int32 chargeLevel, out Int32 maxChargeLevel);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_PerformanceMetricGetInstantaneousExcitementModelParams")]
        static extern void Unmanaged_IS_PerformanceMetricGetInstantaneousExcitementModelParams(IntPtr state, out Double rawScore, out Double minScale, out Double maxScale);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_PerformanceMetricGetRelaxationModelParams")]
        static extern void Unmanaged_IS_PerformanceMetricGetRelaxationModelParams(IntPtr state, out Double rawScore, out Double minScale, out Double maxScale);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_PerformanceMetricGetEngagementBoredomModelParams")]
        static extern void Unmanaged_IS_PerformanceMetricGetEngagementBoredomModelParams(IntPtr state, out Double rawScore, out Double minScale, out Double maxScale);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_PerformanceMetricGetStressModelParams")]
        static extern void Unmanaged_IS_PerformanceMetricGetStressModelParams(IntPtr state, out Double rawScore, out Double minScale, out Double maxScale);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_PerformanceMetricGetInterestModelParams")]
        static extern void Unmanaged_IS_PerformanceMetricGetInterestModelParams(IntPtr state, out Double rawScore, out Double minScale, out Double maxScale);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IS_PerformanceMetricGetFocusModelParams")]
        static extern void Unmanaged_IS_PerformanceMetricGetFocusModelParams(IntPtr state, out Double rawScore, out Double minScale, out Double maxScale);

	
    
        public static Int32 IEE_EngineConnect(String security)
        {            
            return Unmanged_IEE_EngineConnect(security);
        }
        public static Int32 IEE_EngineLocalConnect(String pathEEGFile, String pathMotionFile)
        {
            return Unmanged_IEE_EngineLocalConnect(pathEEGFile, pathMotionFile);
        }
        public static Int32 IEE_EngineRemoteConnect(String szHost, UInt16 port)
        {
            return Unmanged_IEE_EngineRemoteConnect(szHost, port);
        }
        public static Int32 IEE_EngineDisconnect()
        {
            return Unmanged_IEE_EngineDisconnect();
        }
        public static Int32 IEE_EnableDiagnostics(String szFilename, Int32 fEnable, Int32 nReserved)
        {
            return Unmanged_IEE_EnableDiagnostics(szFilename, fEnable, nReserved);
        }
        public static IntPtr IEE_EmoEngineEventCreate()
        {
            return Unmanged_IEE_EmoEngineEventCreate();
        }
        public static IntPtr IEE_ProfileEventCreate()
        {
            return Unmanged_IEE_ProfileEventCreate();
        }
        public static void IEE_EmoEngineEventFree(IntPtr hEvent)
        {
            Unmanged_IEE_EmoEngineEventFree(hEvent);
        }
        public static IntPtr IEE_EmoStateCreate()
        {
            return Unmanged_IEE_EmoStateCreate();
        }
        public static void IEE_EmoStateFree(IntPtr hState)
        {
            Unmanged_IEE_EmoStateFree(hState);
        }
        public static IEE_Event_t IEE_EmoEngineEventGetType(IntPtr hEvent)
        {
            return Unmanged_IEE_EmoEngineEventGetType(hEvent);
        }
        public static IEE_MentalCommandEvent_t IEE_MentalCommandEventGetType(IntPtr hEvent)
        {
            return Unmanged_IEE_MentalCommandEventGetType(hEvent);
        }
        public static IEE_FacialExpressionEvent_t IEE_FacialExpressionEventGetType(IntPtr hEvent)
        {
            return Unmanged_IEE_FacialExpressionEventGetType(hEvent);
        }

        public static Int32 IEE_EmoEngineEventGetUserId(IntPtr hEvent, out UInt32 pUserIdOut)
        {
            return Unmanged_IEE_EmoEngineEventGetUserId(hEvent, out pUserIdOut);
        }

        public static Int32 IEE_EmoEngineEventGetEmoState(IntPtr hEvent, IntPtr hEmoState)
        {
            return Unmanged_IEE_EmoEngineEventGetEmoState(hEvent, hEmoState);
        }

        public static Int32 IEE_EngineGetNextEvent(IntPtr hEvent)
        {
            return Unmanged_IEE_EngineGetNextEvent(hEvent);
        }

        public static Int32 IEE_EngineClearEventQueue(Int32 eventTypes)
        {
            return Unmanged_IEE_EngineClearEventQueue(eventTypes);
        }

        public static Int32 IEE_EngineGetNumUser(out UInt32 pNumUserOut)
        {
            return Unmanged_IEE_EngineGetNumUser(out pNumUserOut);
        }

        public static Int32 IEE_SetHardwarePlayerDisplay(UInt32 userId, UInt32 playerNum)
        {
            return Unmanged_IEE_SetHardwarePlayerDisplay(userId, playerNum);
        }

        public static Int32 IEE_SetUserProfile(UInt32 userId, byte[] profileBuffer, UInt32 length)
        {
            return Unmanged_IEE_SetUserProfile(userId, profileBuffer, length);
        }

        public static Int32 IEE_GetUserProfile(UInt32 userId, IntPtr hEvent)
        {
            return Unmanged_IEE_GetUserProfile(userId, hEvent);
        }

        public static Int32 IEE_GetBaseProfile(IntPtr hEvent)
        {
            return Unmanged_IEE_GetBaseProfile(hEvent);
        }

        public static Int32 IEE_GetUserProfileSize(IntPtr hEvt, out UInt32 pProfileSizeOut)
        {
            return Unmanged_IEE_GetUserProfileSize(hEvt, out pProfileSizeOut);
        }


        public static Int32 IEE_GetUserProfileBytes(IntPtr hEvt, Byte[] destBuffer, UInt32 length)
        {
            return Unmanged_IEE_GetUserProfileBytes(hEvt, destBuffer, length);
        }

        public static Int32 IEE_LoadUserProfile(UInt32 userID, String szInputFilename)
        {
            return Unmanged_IEE_LoadUserProfile(userID, szInputFilename);
        }

        public static Int32 IEE_SaveUserProfile(UInt32 userID, String szOutputFilename)
        {
            return Unmanged_IEE_SaveUserProfile(userID, szOutputFilename);
        }

        public static Int32 IEE_FacialExpressionSetThreshold(UInt32 userId, IEE_FacialExpressionAlgo_t algoName, IEE_FacialExpressionThreshold_t thresholdName, Int32 value)
        {
            return Unmanged_IEE_FacialExpressionSetThreshold(userId, algoName, thresholdName, value);
        }

        public static Int32 IEE_FacialExpressionGetThreshold(UInt32 userId, IEE_FacialExpressionAlgo_t algoName, IEE_FacialExpressionThreshold_t thresholdName, out Int32 pValueOut)
        {
            return Unmanged_IEE_FacialExpressionGetThreshold(userId, algoName, thresholdName, out pValueOut);
        }
